--- a/serverless.yml
+++ b/serverless.yml
@@ -43,7 +43,7 @@ package:
 
 functions:
   hello:
-    handler: hello.Handler
+    handler: hello.ApiGatewayHandler
     events:
       - httpApi:
           path: /
