--- a/serverless.yml
+++ b/serverless.yml
@@ -74,7 +74,7 @@ functions:
     events:
       - httpApi:
           path: /v0/users/{email}/events
-          method: post
+          method: get
     environment:
       events_table: events
 #    The following are a few example events you can configure
