+ get but empty, so added logs

--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ provider:
             - dynamodb:BatchWriteItem
             - dynamodb:DeleteItem
             - dynamodb:PutItem
+            - dynamodb:Query
           Resource:
             - Fn::Join:
                 - ':'
